--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/mddalam1/npm-demo/issues"
   },
-  "homepage": "https://github.com/mddalam1/npm-demo#readme"
+  "homepage": "https://github.com/mddalam1/npm-demo#readme",
+  "dependencies": {
+    "underscore": "^1.12.0"
+  }
 }
